--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "eslint-plugin-es-beautifier": "^1.0.1",
     "quasar": "^2.0.0",
     "vue": "^3.2.13",
+    "vue-axios": "^3.4.1",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
@@ -28,6 +29,7 @@
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "@vue/eslint-config-typescript": "^9.1.0",
+    "axios": "^0.18.0",
     "eslint": "^8.20.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
@@ -37,6 +39,7 @@
     "sass": "1.32.12",
     "sass-loader": "^12.0.0",
     "typescript": "~4.5.5",
+    "vue-cli-plugin-axios": "~0.0.4",
     "vue-cli-plugin-quasar": "~5.0.1",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0"
