--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -14,6 +14,10 @@
             "NODE_VERSION": "lts/*"
         }
     },
+    "mounts": [
+        "source=//var/run/docker.sock,target=//var/run/docker.sock,type=bind",
+        "source=timekeeper-client-scripts,target=/opt/timekeeper/,type=volume"
+    ],
     // Configure tool-specific properties.
     "customizations": {
         // Configure properties specific to VS Code.
@@ -25,24 +29,28 @@
                         "path": "/bin/bash"
                     }
                 },
+                "[python]": {
+                    "editor.defaultFormatter": "ms-python.python",
+                    "editor.formatOnSave": true
+                },
                 "python.defaultInterpreterPath": "/usr/local/bin/python",
                 "python.languageServer": "Default",
+                "python.linting.lintOnSave": true,
                 "python.linting.enabled": true,
-                "python.linting.pylintEnabled": true,
-                "python.formatting.autopep8Path": "/usr/local/py-utils/bin/autopep8",
-                "python.formatting.blackPath": "/usr/local/py-utils/bin/black",
+                "python.linting.pylintEnabled": false,
+                "python.formatting.provider": "yapf",
                 "python.formatting.yapfPath": "/usr/local/py-utils/bin/yapf",
-                "python.linting.banditPath": "/usr/local/py-utils/bin/bandit",
                 "python.linting.flake8Path": "/usr/local/py-utils/bin/flake8",
-                "python.linting.mypyPath": "/usr/local/py-utils/bin/mypy",
-                "python.linting.pycodestylePath": "/usr/local/py-utils/bin/pycodestyle",
-                "python.linting.pydocstylePath": "/usr/local/py-utils/bin/pydocstyle",
-                "python.linting.pylintPath": "/usr/local/py-utils/bin/pylint"
+                "python.linting.flake8Enabled": true,
+                "python.linting.flake8Args": [
+                    "--max-line-length=120"
+                ]
             },
             // Add the IDs of extensions you want installed when the container is created.
             "extensions": [
                 "ms-python.python",
-                "ms-python.vscode-pylance"
+                "ms-python.vscode-pylance",
+                "octref.vetur"
             ]
         }
     },
@@ -60,7 +68,7 @@
     // 		"onAutoForward": "silent"
     // },
     // Use 'postCreateCommand' to run commands after the container is created.
-    "postCreateCommand": "pip3 install -r /workspaces/timekeeper/backend/requirements.txt; cd /workspaces/timekeeper/frontend/ && nohup bash -c 'yarn serve &';",
+    "postCreateCommand": "pip install -r /workspaces/timekeeper/backend/requirements.txt"
     // Comment out to connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
-    "remoteUser": "vscode"
+    // "remoteUser": "vscode"
 }
