feat: create docker client dependendy class, adjust container instantiation

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,10 +1,13 @@
 yapf
 flake8
 fastapi
-uvicorn
 dependency-injector
 loguru
 apscheduler
 docker
 pymongo
 python-multipart
+uvicorn[standard]
+gunicorn
+pyzmq
+mypy
